[package]
name = "rccell"
version = "0.1.1"
authors = ["Román Cárdenas <rcardenas.rod@gmail.com>"]
edition = "2018"
description = "A convenient wrapper for Rc<RefCell<T>>"
readme = "README.md"
homepage = "https://github.com/romancardenas/rccell"
repository = "https://github.com/romancardenas/rccell.git"
license = "MIT"
keywords = ["cell", "rc", "refcell"]
categories = ["memory-management"]

[dependencies]
